feat: add media RC
